Small tweaks to the style. It now looks more integrated.

--- a/ccplus.css
+++ b/ccplus.css
@@ -2,63 +2,76 @@
 /* line 1, ccplus.scss */
 #topBar {
   top: 20px;
+  box-shadow: none;
+  line-height: 32px;
+}
+/* line 5, ccplus.scss */
+#topBar div {
+  margin: 0 10px;
 }
 
-/* line 4, ccplus.scss */
+/* line 9, ccplus.scss */
 #game {
   top: 52px;
 }
 
-/* line 7, ccplus.scss */
+/* line 12, ccplus.scss */
 #ccplus {
   height: 20px;
   top: 0;
-  background-color: black;
+  background-image: url(http://orteil.dashnet.org/cookieclicker/img/darkNoise.png);
 }
-/* line 11, ccplus.scss */
+/* line 16, ccplus.scss */
 #ccplus ul {
   list-style: none;
   margin: 0;
-  padding: 0 0 0 20px;
+  padding: 0 0 0 10px;
+  height: 20px;
 }
-/* line 15, ccplus.scss */
+/* line 21, ccplus.scss */
 #ccplus ul li {
   margin: 0 10px 0 0;
   padding: 0;
   float: left;
   line-height: 20px;
 }
-/* line 20, ccplus.scss */
+/* line 26, ccplus.scss */
 #ccplus ul li:after {
   margin-left: 5px;
 }
-/* line 23, ccplus.scss */
-#ccplus ul li.cheat {
-  cursor: pointer;
-}
-/* line 25, ccplus.scss */
+/* line 30, ccplus.scss */
 #ccplus ul li.cheat:after {
   content: "✗";
   color: red;
 }
-/* line 30, ccplus.scss */
+/* line 35, ccplus.scss */
 #ccplus ul li.cheat.on:after {
   content: "✓";
   color: lime;
 }
-/* line 34, ccplus.scss */
+/* line 39, ccplus.scss */
 #ccplus ul li.cheat.on + li.fps {
   display: block;
 }
-/* line 39, ccplus.scss */
+/* line 44, ccplus.scss */
 #ccplus ul li.fps {
   display: none;
+  color: #cccccc;
 }
-/* line 41, ccplus.scss */
+/* line 47, ccplus.scss */
 #ccplus ul li.fps:after {
   content: "fps";
 }
-/* line 45, ccplus.scss */
-#ccplus ul li.mail {
+/* line 51, ccplus.scss */
+#ccplus ul li.mail, #ccplus ul li.cheat {
   cursor: pointer;
+}
+/* line 54, ccplus.scss */
+#ccplus ul li span {
+  text-decoration: underline;
+}
+/* line 56, ccplus.scss */
+#ccplus ul li span:hover {
+  text-shadow: 0px 0px 3px #ffffff;
+  color: #ffffff;
 }
