--- a/ccplus.scss
+++ b/ccplus.scss
@@ -1,5 +1,10 @@
 #topBar {
 	top: 20px;
+	box-shadow: none;
+	line-height: 32px;
+	div {
+		margin: 0 10px;
+	}
 }
 #game {
 	top: 52px;
@@ -7,11 +12,12 @@
 #ccplus {
 	height: 20px;
 	top:0;
-	background-color: black;
+	background-image: url(http://orteil.dashnet.org/cookieclicker/img/darkNoise.png);
 	ul {
 		list-style: none;
 		margin:0;
-		padding:0 0 0 20px;
+		padding:0 0 0 10px;
+		height: 20px;
 		li {
 			margin: 0 10px 0 0;
 			padding: 0;
@@ -21,7 +27,6 @@
 				margin-left: 5px;
 			}
 			&.cheat {
-				cursor: pointer;
 				&:after {
 					content: "✗";
 					color: red;
@@ -38,12 +43,20 @@
 			}
 			&.fps {
 				display: none;
+				color: #cccccc;
 				&:after {
 					content: "fps";
 				}
 			}
-			&.mail {
+			&.mail, &.cheat {
 				cursor: pointer;
+			}
+			span {
+				text-decoration: underline;
+				&:hover {
+					text-shadow: 0px 0px 3px #ffffff;
+					color: #ffffff;
+				}
 			}
 		}
 	}
