--- a/ccplus.css
+++ b/ccplus.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* line 1, ccplus.scss */
 #topBar {
   top: 20px;
@@ -39,39 +38,79 @@
 #ccplus ul li:after {
   margin-left: 5px;
 }
-/* line 30, ccplus.scss */
-#ccplus ul li.cheat:after {
-  content: "✗";
-  color: red;
+/* line 29, ccplus.scss */
+#ccplus ul li input[type=checkbox][name=cheat]:checked + .fps {
+  display: inline;
 }
-/* line 35, ccplus.scss */
-#ccplus ul li.cheat.on:after {
-  content: "✓";
-  color: lime;
-}
-/* line 39, ccplus.scss */
-#ccplus ul li.cheat.on + li.fps {
-  display: block;
-}
-/* line 44, ccplus.scss */
-#ccplus ul li.fps {
+/* line 32, ccplus.scss */
+#ccplus ul li .fps {
   display: none;
   color: #cccccc;
+  text-decoration: none;
 }
-/* line 47, ccplus.scss */
-#ccplus ul li.fps:after {
+/* line 36, ccplus.scss */
+#ccplus ul li .fps:after {
   content: "fps";
 }
-/* line 51, ccplus.scss */
-#ccplus ul li.mail, #ccplus ul li.cheat {
+/* line 40, ccplus.scss */
+#ccplus ul li.mail {
   cursor: pointer;
 }
-/* line 54, ccplus.scss */
-#ccplus ul li span {
+/* line 43, ccplus.scss */
+#ccplus ul li span:not(.fps) {
   text-decoration: underline;
 }
-/* line 56, ccplus.scss */
-#ccplus ul li span:hover {
+/* line 45, ccplus.scss */
+#ccplus ul li span:not(.fps):hover {
   text-shadow: 0px 0px 3px #ffffff;
   color: #ffffff;
+}
+
+/* line 54, ccplus.scss */
+input[type=checkbox].switch {
+  height: 15px;
+  width: 50px;
+  visibility: hidden;
+  margin: 2px;
+}
+/* line 59, ccplus.scss */
+input[type=checkbox].switch:before, input[type=checkbox].switch:after {
+  visibility: visible;
+  height: 15px;
+  line-height: 13px;
+  font-size: 10px;
+  background-color: #444444;
+  text-align: center;
+  display: block;
+  float: left;
+  transition: all 0.125s;
+  color: white;
+  border-style: solid;
+  border-color: #888888;
+  box-sizing: border-box;
+}
+/* line 74, ccplus.scss */
+input[type=checkbox].switch:before {
+  content: attr(data-on);
+  width: 20px;
+  border-radius: 10px 0 0 10px;
+  border-width: 1px 0 1px 1px;
+}
+/* line 80, ccplus.scss */
+input[type=checkbox].switch:after {
+  content: attr(data-off);
+  background-color: #880000;
+  width: 30px;
+  border-radius: 0 10px 10px 0;
+  border-width: 1px 1px 1px 0;
+}
+/* line 87, ccplus.scss */
+input[type=checkbox].switch:checked:before {
+  background-color: #008800;
+  width: 30px;
+}
+/* line 91, ccplus.scss */
+input[type=checkbox].switch:checked:after {
+  background-color: #444444;
+  width: 20px;
 }
