--- a/ccplus.scss
+++ b/ccplus.scss
@@ -26,32 +26,21 @@
 			&:after {
 				margin-left: 5px;
 			}
-			&.cheat {
-				&:after {
-					content: "✗";
-					color: red;
-				}
-				&.on {
-					&:after {
-						content: "✓";
-						color: rgb(0,255,0);
-					}
-					& + li.fps {
-						display: block;
-					}
-				}
+			input[type=checkbox][name=cheat]:checked + .fps {
+				display: inline;
 			}
-			&.fps {
+			.fps {
 				display: none;
 				color: #cccccc;
+				text-decoration: none;
 				&:after {
 					content: "fps";
 				}
 			}
-			&.mail, &.cheat {
+			&.mail {
 				cursor: pointer;
 			}
-			span {
+			span:not(.fps) {
 				text-decoration: underline;
 				&:hover {
 					text-shadow: 0px 0px 3px #ffffff;
@@ -59,5 +48,48 @@
 				}
 			}
 		}
+	}
+}
+
+input[type=checkbox].switch {
+	height: 15px;
+	width: 50px;
+	visibility: hidden;
+	margin: 2px;
+	&:before, &:after {
+		visibility: visible;
+		height: 15px;
+		line-height: 13px;
+		font-size: 10px;
+		background-color: #444444;
+		text-align: center;
+		display: block;
+		float: left;
+		transition: all 0.125s;
+		color: white;
+		border-style: solid;
+		border-color: #888888;
+		box-sizing: border-box;
+	}
+	&:before {
+		content: attr(data-on);
+		width: 20px;
+		border-radius: 10px 0 0 10px;
+		border-width: 1px 0 1px 1px;
+	}
+	&:after {
+		content: attr(data-off);
+		background-color: #880000;
+		width: 30px;
+		border-radius: 0 10px 10px 0;
+		border-width: 1px 1px 1px 0;
+	}
+	&:checked:before {
+		background-color: #008800;
+		width: 30px;
+	}
+	&:checked:after {
+		background-color: #444444;
+		width: 20px;
 	}
 }
