Added Golden Hoard toggle button

--- a/ccplus.css
+++ b/ccplus.css
@@ -17,63 +17,57 @@
 /* line 12, ccplus.scss */
 #ccplus {
   height: 20px;
+  line-height: 20px;
   top: 0;
-  background-image: url(http://orteil.dashnet.org/cookieclicker/img/darkNoise.png);
+  background-color: black;
+  color: white;
 }
-/* line 16, ccplus.scss */
+/* line 18, ccplus.scss */
 #ccplus ul {
   list-style: none;
   margin: 0;
   padding: 0 0 0 10px;
   height: 20px;
 }
-/* line 21, ccplus.scss */
+/* line 23, ccplus.scss */
 #ccplus ul li {
   margin: 0 10px 0 0;
   padding: 0;
   float: left;
   line-height: 20px;
 }
-/* line 26, ccplus.scss */
-#ccplus ul li:after {
-  margin-left: 5px;
-}
-/* line 29, ccplus.scss */
-#ccplus ul li input[type=checkbox][name=cheat]:checked + .fps {
-  display: inline;
-}
-/* line 32, ccplus.scss */
+/* line 28, ccplus.scss */
 #ccplus ul li .fps {
-  display: none;
-  color: #cccccc;
   text-decoration: none;
 }
-/* line 36, ccplus.scss */
-#ccplus ul li .fps:after {
-  content: "fps";
-}
-/* line 40, ccplus.scss */
-#ccplus ul li.mail {
+/* line 31, ccplus.scss */
+#ccplus ul li .mail {
   cursor: pointer;
 }
-/* line 43, ccplus.scss */
-#ccplus ul li span:not(.fps) {
-  text-decoration: underline;
-}
-/* line 45, ccplus.scss */
-#ccplus ul li span:not(.fps):hover {
-  text-shadow: 0px 0px 3px #ffffff;
-  color: #ffffff;
+/* line 34, ccplus.scss */
+#ccplus ul li .hoard {
+  cursor: pointer;
+  display: block;
+  height: 16px;
+  width: 50px;
+  text-align: center;
+  background-color: lightblue;
+  color: black;
+  border-radius: 20px;
+  box-sizing: border-box;
+  border: 1px solid red;
+  line-height: 16px;
+  margin: 2px 0;
 }
 
-/* line 54, ccplus.scss */
+/* line 52, ccplus.scss */
 input[type=checkbox].switch {
   height: 15px;
   width: 50px;
   visibility: hidden;
   margin: 2px;
 }
-/* line 59, ccplus.scss */
+/* line 57, ccplus.scss */
 input[type=checkbox].switch:before, input[type=checkbox].switch:after {
   visibility: visible;
   height: 15px;
@@ -89,14 +83,14 @@ input[type=checkbox].switch:before, input[type=checkbox].switch:after {
   border-color: #888888;
   box-sizing: border-box;
 }
-/* line 74, ccplus.scss */
+/* line 72, ccplus.scss */
 input[type=checkbox].switch:before {
   content: attr(data-on);
   width: 20px;
   border-radius: 10px 0 0 10px;
   border-width: 1px 0 1px 1px;
 }
-/* line 80, ccplus.scss */
+/* line 78, ccplus.scss */
 input[type=checkbox].switch:after {
   content: attr(data-off);
   background-color: #880000;
@@ -104,13 +98,15 @@ input[type=checkbox].switch:after {
   border-radius: 0 10px 10px 0;
   border-width: 1px 1px 1px 0;
 }
-/* line 87, ccplus.scss */
+/* line 85, ccplus.scss */
 input[type=checkbox].switch:checked:before {
   background-color: #008800;
   width: 30px;
 }
-/* line 91, ccplus.scss */
+/* line 89, ccplus.scss */
 input[type=checkbox].switch:checked:after {
   background-color: #444444;
   width: 20px;
 }
+
+/*# sourceMappingURL=ccplus.css.map */
