--- a/ccplus.scss
+++ b/ccplus.scss
@@ -11,8 +11,10 @@
 }
 #ccplus {
 	height: 20px;
+	line-height: 20px;
 	top:0;
-	background-image: url(http://orteil.dashnet.org/cookieclicker/img/darkNoise.png);
+	background-color: black;
+	color: white;
 	ul {
 		list-style: none;
 		margin:0;
@@ -23,29 +25,25 @@
 			padding: 0;
 			float: left;
 			line-height: 20px;
-			&:after {
-				margin-left: 5px;
-			}
-			input[type=checkbox][name=cheat]:checked + .fps {
-				display: inline;
-			}
 			.fps {
-				display: none;
-				color: #cccccc;
 				text-decoration: none;
-				&:after {
-					content: "fps";
-				}
 			}
-			&.mail {
+			.mail {
 				cursor: pointer;
 			}
-			span:not(.fps) {
-				text-decoration: underline;
-				&:hover {
-					text-shadow: 0px 0px 3px #ffffff;
-					color: #ffffff;
-				}
+			.hoard {
+				cursor: pointer;
+				display: block;
+				height: 16px;
+				width: 50px;
+				text-align: center;
+				background-color: lightblue;
+				color: black;
+				border-radius: 20px;
+				box-sizing: border-box;
+				border: 1px solid red;
+				line-height: 16px;
+				margin: 2px 0;
 			}
 		}
 	}
